[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.poetry]
name = "greynirseq"
version = "0.1"
description = "Natural language processing for Icelandic"
authors = []
readme = "README.md"
repository = "https://github.com/mideind/GreynirSeq"
packages = [
    {include = "greynirseq", from = "src"}
]
[tool.poetry.scripts]
greynirseq = "greynirseq.cli.greynirseq:main"

[tool.poetry.dependencies]
python = "^3.7.2"
fairseq = "^0.10.0" 
nltk = "^3.5"
reynir = "^2.10.1"
transformers = "^4.3.2"
spacy = "^2"
pyjarowinkler = "^1.8"
scipy = "^1.5"

[tool.poetry.dev-dependencies]
pydocstyle = "^5.0.2"
pytest = "^6.0.1"
tensorboard = "^2.3.0"
rope = "^0.17.0"
black = "^20.8b1"
isort = "^5.7.0"
pylint = "^2.7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
