[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.poetry]
name = "greynirseq"
version = "0.1.2"
description = "Natural language processing for Icelandic"
authors = ["Miðeind ehf <tauganet@mideind.is>"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Natural Language :: Icelandic",
    "Environment :: GPU :: NVIDIA CUDA :: 10.1",
    "Environment :: GPU :: NVIDIA CUDA :: 10.2",
    "Environment :: GPU :: NVIDIA CUDA :: 11.0",
    "Environment :: GPU :: NVIDIA CUDA :: 11.1",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Linguistic",
]
keywords=["nlp", "pos", "ner", "icelandic"]
license = "AGPLv3+"
readme = "README.md"
homepage = "https://github.com/mideind/GreynirSeq"
repository = "https://github.com/mideind/GreynirSeq"
packages = [
    {include = "greynirseq", from = "src"}
]
include = [
    "LICENSE",
]

[tool.poetry.scripts]
greynirseq = "greynirseq.cli.greynirseq:main"

[tool.poetry.dependencies]
python = "^3.7.2"
fairseq = "^0.10.0" 
nltk = "^3.5"
reynir = "^2.10.1"
transformers = "^4.3.2"
spacy = "^2"
pyjarowinkler = "^1.8"
scipy = "^1.5"
sentencepiece = "^0.1.96"

[tool.poetry.dev-dependencies]
pydocstyle = "^5.0.2"
pytest = "^6.0.1"
tensorboard = "^2.3.0"
rope = "^0.17.0"
black = "^20.8b1"
isort = "^5.7.0"
pylint = "^2.7.2"
flake8 = "^3.8.4"
mypy = "^0.812"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
