[project]
name = "greynirseq"
version = "0.5.1"
description = "Natural language processing for Icelandic"
authors = [{name = "Miðeind ehf", email="tauganet@mideind.is"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Natural Language :: Icelandic",
    "Environment :: GPU :: NVIDIA CUDA :: 10.1",
    "Environment :: GPU :: NVIDIA CUDA :: 10.2",
    "Environment :: GPU :: NVIDIA CUDA :: 11.0",
    "Environment :: GPU :: NVIDIA CUDA :: 11.1",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["nlp", "pos", "ner", "icelandic", "translation"]
license = [
    {file="LICENSE"},
]
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "fairseq>=0.12.2",
    "nltk>=3.5",  # parser
    "reynir>=3.5.0",
    "transformers>=4.3.2",
    "sentencepiece>=0.1.96",
    "langid>=1.1.6",  # filters
    "editdistance>=0.6.0"  # filters
]

[project.urls]
Homepage = "https://github.com/mideind/GreynirSeq"
Repository = "https://github.com/mideind/GreynirSeq"

[project.scripts]
greynirseq = "greynirseq.cli.greynirseq_main:main"

[project.optional-dependencies]
dev = [
    "pydocstyle>=5.0.2",
    "pytest>=6.0.1",
    "tensorboard>=2.3.0",
    "rope>=0.17.0",
    "black>=22.1.0",
    "isort>=5.7.0",
    "pylint>=2.7.2",
    "flake8>=3.8.4",
    "mypy>=0.812"
    ]
ner-pipeline = [
    "spacy>=2",
    "pyjarowinkler>=1.8",
    "scipy>=1.5",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools", "cython", "numpy"]
build-backend = "setuptools.build_meta"
